Added information page navigation

--- a/src/styles.css
+++ b/src/styles.css
@@ -19,6 +19,13 @@ body {
     border-radius: 50%;
 }
 
+.description p {
+    color: #344e41;
+    font-size: 20px;
+    text-align: center;
+    margin-top: 30px;
+}
+
 label {
     font-size: 20px;
     color: #588157;
